# Model_Based_Testing_Using_LLMs

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: bgp.py  dns.py  generated_confed_translator2.py  generated_rr_translator1.py  generated_rr_translator2.py  plot_graphs.py  smtp.py  smtp_setup_state.py  test-rr.py  test-rr1-rmap.py  test-rr1.py
src/: README.md  dns.py  generate_translator.py  generated_confed_translator1.py  ipv4_match_code.c  requirements.txt  smtp_generate_transition_dict.py  test-confed.py  test.py  test_prefix_list.py  test_rmap.py  test_smtp.py  translator_template.py
src/eywa/: __init__.py  ast.py  composer.py  composition.py  key.py  llm.py  oracles.py  regex.py  run.py
src/testing/confed/: diff_tester.py
src/testing/confed/batfish/: batfish_tests.ipynb  test_to_batfish_config.py
src/testing/confed/frr/: docker-compose.yml  test.py
src/testing/confed/gobgp/: docker-compose.yml  gobgp_translator.py  start.sh
src/testing/rr/gobgp/: docker-compose.yml  gobgp_translator.py  (+1 more)
src/testing/smtp/: README.md  diff_tester.py  server1.py  server3.py  tester.py
tester/bgp/: README.md
tester/bgp/confed/: comparison.csv  diff_testing.py
tester/bgp/rmap_pl/: diff_testing.py  diff_testing_parallel.py
tester/bgp/rr/: diff_testing.py
tester/bgp/rr_rmap/: diff_testing.py
tester/dns/: delete_containers.py  generate_docker_images.py  preprocessor_checks.py  query_impl_server.py  test_implementations.py  triaging.py  triaging2.py
tester/dns/Bind/: Dockerfile  named.conf  prepare.py
tester/dns/Coredns/: Corefile  Dockerfile  prepare.py
tester/dns/Gdnsd/: Dockerfile  prepare.py
tester/dns/Implementations/: README.md  main.py
tester/dns/Knot/: Dockerfile  knot.conf  prepare.py
tester/dns/Maradns/: Dockerfile  mararc.sh  prepare.py  tocsv2.py
tester/dns/Nsd/: Dockerfile  nsd.conf  prepare.py
tester/dns/Powerdns/: Dockerfile  bindbackend.conf  pdns.conf  prepare.py
tester/dns/Scripts/: delete_containers.py  generate_docker_images.py  preprocessor_checks.py  query_impl_server.py  test_with_invalid_zone_files.py  test_with_valid_zone_files.py
tester/dns/Technitium/: Dockerfile  prepare.py  run_curl.sh
tester/dns/Trustdns/: Dockerfile  config.toml  prepare.py
tester/dns/Twistednames/: Dockerfile  prepare.py
tester/dns/Yadifa/: Dockerfile  prepare.py  yadifad.conf
tester/smtp/: README.md  diff_testing.py  server_aiosmtpd.py  server_opensmtpd.py
tests/confed/frr/: test copy.py
tests/confed/gobgp/: README.md
tests/rr/frr/: docker-compose.yml  test.py  test.sh
tests/smtp/: server2.py
(+121 files in other folders)
