[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eywa"
version = "0.1.0"
description = "Eywa: Automating Model-based Testing using LLMs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9,<3.12"
authors = [
    {name = "Microsoft"}
]
keywords = [
    "model-based-testing",
    "llm",
    "testing",
    "dns",
    "bgp",
    "smtp",
    "openai"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "aiosmtpd>=1.4.6",
    "annotated-types>=0.7.0",
    "anyio>=4.12.0",
    "atpublic>=7.0.0",
    "attrs>=25.4.0",
    "certifi>=2025.11.12",
    "charset-normalizer>=3.4.4",
    "contourpy>=1.3.3",
    "cycler>=0.12.1",
    "deepdiff>=8.6.1",
    "distro>=1.9.0",
    "dnspython==2.8.0"
    "docker>=7.1.0",
    "fonttools>=4.61.1",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "idna>=3.11",
    "jiter>=0.12.0",
    "kiwisolver>=1.4.9",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "openai>=2.14.0",
    "orderly-set>=5.5.0",
    "packaging>=25.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pybatfish>=2025.7.7.2423",
    "pydantic>=2.12.5",
    "pydantic_core>=2.41.5",
    "pyparsing>=3.2.5",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "PyYAML>=6.0.3",
    "regex>=2025.11.3",
    "requests>=2.32.5",
    "requests-toolbelt>=1.0.0",
    "simplejson>=3.20.2",
    "six>=1.17.0",
    "smtpd>=0.2.0",
    "sniffio>=1.3.1",
    "termcolor>=3.2.0",
    "tqdm>=4.67.1",
    "typing-inspection>=0.4.2",
    "typing_extensions>=4.15.0",
    "tzdata>=2025.3",
    "urllib3>=2.6.2",
]

[project.urls]
Homepage = "https://github.com/microsoft/Model_Based_Testing_Using_LLMs"
Repository = "https://github.com/microsoft/Model_Based_Testing_Using_LLMs"
Issues = "https://github.com/microsoft/Model_Based_Testing_Using_LLMs/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
